src/gae/static/css/styles.css
#datepicker-ui
{
    margin-top: 10px;
}

#datepicker-ui td
{
    padding-right: 10px;
    vertical-align: middle;
}

#datepicker
{
    background-color: #5e94ff;
    color: white;
    font-size: 2em;
    font-weight: bold;
    height: 2em;
    text-align: center;
    width: 12em;
    
    border:solid 1px #5e94ff;
    -webkit-border-radius: 15px;
    -moz-border-radius: 15px;
    border-radius: 15px;
}

#itinerary
{
    background-color: white;
    height: 100%;
    padding-left: 5px;
    padding-right: 5px;
    width: 15em;
}

#itinerary table
{
    width: 100%;
}

.select-game-link
{
    text-align: right;
}

.ana
{
    background-image: url(/static/images/logos.png);
    background-position: -722px -130px;
    width: 88px;
    height: 118px;
    zoom: .5;
}

.ari
{
    background-image: url(/static/images/logos.png);
    background-position: -26px -14px;
    width: 104px;
    height: 108px;
    zoom: .5;
}

.atl
{
    background-image: url(/static/images/logos.png);
    background-position: -146px -20px; 
    width: 104px;
    height: 96px;  
    zoom: .5;
}

.bal
{
    background-image: url(/static/images/logos.png);
    background-position: -268px -18px;
    width: 128px;
    height: 100px;
    zoom: .5;
}

.bos
{
    background-image: url(/static/images/logos.png);
    background-position: -402px -20px;
    width: 66px;
    height: 98px;
    zoom: .5;
}

.chc
{
    background-image: url(/static/images/logos.png);
    background-position: -478px -12px;
    width: 110px;
    height: 112px;
    zoom: .5;
}

.cin
{
    background-image: url(/static/images/logos.png);
    background-position: -686px -22px;
    width: 138px;
    height: 94px;
    zoom: .5;
}

.cle
{
    background-image: url(/static/images/logos.png);
    background-position: -850px -10px;
    width: 86px;
    height: 104px;
    zoom: .5;
}

.col
{
    background-image: url(/static/images/logos.png);
    background-position: -4px -152px;
    width: 118px;
    height: 86px;
    zoom: .5;
}

.cws
{
    background-image: url(/static/images/logos.png);
    background-position: -596px -14px;
    width: 86px;
    height: 102px;
    zoom: .5;
}

.det
{
    background-image: url(/static/images/logos.png);
    background-position: -134px -134px;
    width: 80px;
    height: 106px;
    zoom: .5;
}

.hou
{
    background-image: url(/static/images/logos.png);
    background-position: -334px -136px;
    width: 136px;
    height: 106px;
    zoom: .5;
}

.kc
{
    background-image: url(/static/images/logos.png);
    background-position: -484px -132px;
    width: 104px;
    height: 112px;
    zoom: .5;
}

.la
{
    background-image: url(/static/images/logos.png);
    background-position: -598px -134px;
    width: 124px;
    height: 126px;
    zoom: .5;
}

.mia
{
    background-image: url(/static/images/logos.png);
    background-position: -228px -146px;
    width: 92px;
    height: 104px;
    zoom: .5;
}

.mil
{
    background-image: url(/static/images/logos.png);
    background-position: -806px -150px;
    width: 150px;
    height: 88px;
    zoom: .5;
}

.min
{
    background-image: url(/static/images/logos.png);
    background-position: -62px -264px;
    width: 114px;
    height: 96px;
    zoom: .5;
}

.nym
{
    background-image: url(/static/images/logos.png);
    background-position: -182px -264px;
    width: 98px;
    height: 96px;
    zoom: .5;
}

.nyy
{
    background-image: url(/static/images/logos.png);
    background-position: -282px -262px;
    width: 98px;
    height: 100px;
    zoom: .5;
}

.oak
{
    background-image: url(/static/images/logos.png);
    background-position: -396px -266px;
    width: 108px;
    height: 102px;
    zoom: .5;
}

.phi
{
    background-image: url(/static/images/logos.png);
    background-position: -512px -262px;
    width: 114px;
    height: 106px;
    zoom: .5;
}

.pit
{
    background-image: url(/static/images/logos.png);
    background-position: -634px -274px;
    width: 118px;
    height: 94px;
    zoom: .5;
}

.sd
{
    background-image: url(/static/images/logos.png);
    background-position: -758px -280px;
    width: 126px;
    height: 98px;
    zoom: .5;
}

.sea
{
    background-image: url(/static/images/logos.png);
    background-position: -170px -384px;
    width: 100px;
    height: 100px;
    zoom: .5;
}

.sf
{
    background-image: url(/static/images/logos.png);
    background-position: -20px -394px;
    width: 142px;
    height: 78px;
    zoom: .5;
}

.stl
{
    background-image: url(/static/images/logos.png);
    background-position: -280px -382px;
    width: 108px;
    height: 106px;
    zoom: .5;
}

.tb
{
    background-image: url(/static/images/logos.png);
    background-position: -398px -380px;
    width: 106px;
    height: 106px;
    zoom: .5;
}

.tex
{
    background-image: url(/static/images/logos.png);
    background-position: -522px -382px; 
    width: 102px;
    height: 102px;
    zoom: .5;
}

.tor
{
    background-image: url(/static/images/logos.png);
    background-position: -632px -412px;
    width: 162px;
    height: 50px;
    zoom: .5;
}

.was
{
    background-image: url(/static/images/logos.png);
    background-position: -808px -386px;
    width: 124px;
    height: 92px;
    zoom: .5;
}

